# IronVault-Admin

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Degine.md  README.md
ironvault-core/: Cargo.toml
ironvault-core/src/: audit.rs  auth.rs  crypto.rs  lib.rs  licensing.rs  models.rs  sdk_themida.rs  sdk_vmp.rs  security.rs
ironvault-core/src/database/: mod.rs  oracle.rs  postgres.rs
ironvault-db/: Cargo.toml
ironvault-db/src/: gpf.rs  lib.rs  oracle.rs  pendak.rs  postgres.rs  sai_agartala.rs  vlcs.rs
ironvault-ui/: Cargo.toml  build.rs
ironvault-ui/ironvault-core/src/: audit.rs  licensing.rs
ironvault-ui/src/: auth.rs  context.rs  controllers.rs  main.rs
ironvault-ui/src/handlers/: audit_log.rs  auth.rs  gpffp.rs  mod.rs  pendak.rs  pension.rs  users.rs
ironvault-ui/ui/: appwindow.slint  dashboard.slint  login.slint  main.slint  theme.slint
ironvault-ui/ui/components/: confirm_button.slint
ironvault-ui/ui/views/: dashboard.slint  gpf.slint  login.slint  pendak.slint  pension.slint  vlcs.slint
